fixed overflow

--- a/static/css/light/login.css
+++ b/static/css/light/login.css
@@ -9,7 +9,7 @@ body {
     align-items: center;
     height: 100vh;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 h2 {
